CREATE TABLE IF NOT EXISTS classes (
    id INT AUTO_INCREMENT PRIMARY KEY,
    grade VARCHAR(10) NOT NULL COMMENT '学年',
    class_name VARCHAR(10) NOT NULL COMMENT '組',
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS students (
    id INT AUTO_INCREMENT PRIMARY KEY,
    class_id INT NOT NULL COMMENT '在籍クラス',
    number INT NOT NULL COMMENT '学生番号',
    name VARCHAR(50) NOT NULL COMMENT '氏名',
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (class_id) REFERENCES classes(id)
);

CREATE TABLE IF NOT EXISTS tests (
    id INT AUTO_INCREMENT PRIMARY KEY,
    year INT NOT NULL COMMENT '学年',
    name ENUM('前期中間テスト', '前期期末テスト', '後期中間テスト', '後期期末テスト') NOT NULL COMMENT 'テスト名',
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS exams (
    id INT AUTO_INCREMENT PRIMARY KEY,
    test_id INT NOT NULL COMMENT 'テスト',
    student_id INT NOT NULL COMMENT '生徒',
    kokugo INT NULL COMMENT '国語',
    sugaku INT NULL COMMENT '数学',
    eigo INT NULL COMMENT '英語',
    rika INT NULL COMMENT '理科',
    shakai INT NULL COMMENT '社会',
    goukei INT NULL COMMENT '合計',
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (test_id) REFERENCES tests(id),
    FOREIGN KEY (student_id) REFERENCES students(id)
);
