erDiagram
    classes ||--o{ students : "class_id"
    students ||--o{ exams : "student_id"
    tests ||--o{ exams : "test_id"

%% ||--o{ : 「1対多」
%% || (左側) : 1側。片側が必ず1つであることを示します（必須）。
%% o{ (右側) : 多側。0個以上（Zero or Many）であることを示します。

    classes {
        int id PK
        string grade "学年"
        string class_name "組"
        timestamp created_at "作成日時"
        timestamp updated_at "更新日時"
    }

    students {
        int id PK
        int class_id FK "在籍クラス"
        int number "学生番号"
        string name "氏名"
        timestamp created_at "作成日時"
        timestamp updated_at "更新日時"
    }

    tests {
        int id PK
        int year "学年"
        string name "テスト名（前期中間テスト等）"
        timestamp created_at "作成日時"
        timestamp updated_at "更新日時"
    }

    exams {
        int id PK
        int test_id FK "テスト"
        int student_id FK "生徒"
        int kokugo "国語"
        int sugaku "数学"
        int eigo "英語"
        int rika "理科"
        int shakai "社会"
        int goukei "合計"
        timestamp created_at "作成日時"
        timestamp updated_at "更新日時"
    }
